WebCore:

2009-05-26  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=25969

        Detect the case where we can fit without scrollbars when the view shrinks, so that we don't mistakenly
        continue to show scrollbars.

        Added two tests in fast/dynamic.

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::updateScrollbars):

WebKit/mac:

2009-05-26  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=25969.

        Stop using notifications for boundsChanged, since the notifications are being sent too late.
        Since subviews get resized before parents do, the notification comes in telling the WebHTMLView
        that its size has changed *before* we've done setNeedsLayout in the WebView size change callback.

        Become more like the Windows platform and just do the bounds changed immediately as our size is
        being altered by subclassing setFrameSize in WebView.

        Also patch WebDynamicScrollbarsView to detect the case where neither axis is really spilling out
        past the viewport, so that in shrinking situations we figure out that we don't need scrollbars
        any more.

        * WebView/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView updateScrollers]):
        * WebView/WebView.mm:
        (-[WebView _boundsChangedToNewSize:]):
        (-[WebView setFrameSize:]):
        (-[WebView viewWillMoveToWindow:]):
        (-[WebView viewDidMoveToWindow]):

LayoutTests:

2009-05-26  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        Fix for bug 25969, scrollbars remain after document shrinks.  Add a couple of layout tests
        written by Dan that show various problems with scrollbars following resizes.

        * fast/dynamic/window-resize-scrollbars-test.html: Added.
        * fast/dynamic/window-scrollbars-test.html: Added.
        * platform/mac/fast/dynamic/window-resize-scrollbars-test-expected.checksum: Added.
        * platform/mac/fast/dynamic/window-resize-scrollbars-test-expected.png: Added.
        * platform/mac/fast/dynamic/window-resize-scrollbars-test-expected.txt: Added.
        * platform/mac/fast/dynamic/window-scrollbars-test-expected.checksum: Added.
        * platform/mac/fast/dynamic/window-scrollbars-test-expected.png: Added.
        * platform/mac/fast/dynamic/window-scrollbars-test-expected.txt: Added.



Canonical link: https://commits.webkit.org/36012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44152 268f45cc-cd09-0410-ab3c-d52691b4dbfc